# matchbox-wallet

./: .clang-format  .felgoignore  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  .qmlformat.ini  .qmlls.ini  .secret_deploy.example  CMakeLists.txt  INSTALL.md  README.md  arm64-toolchain.cmake  build-and-deploy.sh  build-arm64.sh  build-cross-x86-arm64.sh  build-js.sh  build-with-felgo-live.sh  build-with-hot-reload.sh  build-with-qt-sdk.sh  build.bat  build.ps1  build.sh  clean.sh  commit.sh  deploy.sh  fix-rights.sh  hot_reload_config.json  hotreload.py  matchbox-wallet.desktop  resources.qrc  start.bat  start.sh  valgrind.sh  valgrind.supp  watch.sh
.github/workflows/: ci.yml
js/: bootstrap.js  build.mjs  package.json  tsconfig.json
js/src/: EventQueue.ts  audio.js  bootstrap.js  display.js  firewall.js  index.ts  speedtest.js  time.js  wifi.js
src/: hotreload.cpp  main.cpp  node.cpp  node_thread.cpp  systemmanager.cpp  wifimanager.cpp  windowsettings.cpp
src/include/: hotreload.h  node.h  node_thread.h  systemmanager.h  wifimanager.h  windowsettings.h
src/js/: audio.js  battery.js  bootstrap.js  bunfig.toml  crypto.js  display.js  firewall.js  index.js  package-lock.json  package.json  power.js  standalone.js  system.js  time.js  wallet-crypto.js  wifi.js
src/js/src/: EventQueue.ts  battery.js  crypto0.js  crypto2_helper.ts  display.js  index.js  index.ts  power.js  speedtest.js  standalone.js  system.js  test.js  wifi.js
src/qml/: AppConstants.qml  Colors.qml  Cpp.qml  Main.qml  MainMenu.qml  MenuButton.qml  SettingsManager.qml  SettingsPage.qml  TranslationManager.qml  WiFiSettingsPage.qml  main.qml  qmldir
src/qml/components/: Alert.qml  BaseMenu.qml  BatteryIndicator.qml  CrossOut.qml  Frame.qml  FrameColumn.qml  FrameHeader.qml  FrameText.qml  Icon.qml  Input.qml  MenuButton.qml  MenuContainer.qml  Navbar.qml  NavbarButton.qml  NavigationBar.qml  Radio.qml  Range.qml  ScrollableContainer.qml  SignalIndicator.qml  SignalStrength.qml  Spinner.qml  SplashScreen.qml  StatusBar.qml  Stepper.qml  Switch.qml
src/qml/lang/: cz.json  en.json
src/qml/pages/: CameraPreview.qml  FontDemo.qml  KeyboardTest.qml  MainMenu.qml  Power.qml  PowerOff.qml  SettingsSystemWiFi.qml  VideoPlayer.qml  Wallet.qml
src/qml/pages/AI/: AI.md  AI.qml  AISettings.qml
src/qml/pages/Calculator/: Calculator.qml
src/qml/pages/Player/: Player.qml  PlayerFolder.qml  PlayerLocal.qml  PlayerNetwork.qml  PlayerVideo.qml
src/qml/pages/Radio/: RadioCountry.qml  RadioFavs.qml  RadioLang.qml  RadioMenu.qml  RadioPlayer.qml  RadioSearch.qml  RadioStationsList.qml
src/qml/pages/Settings/: Settings.qml  SettingsDisplay.qml  SettingsFirewall.qml  SettingsFirewallExceptions.qml  SettingsGeneral.qml  SettingsGeneralFiat.qml  SettingsGeneralLanguage.qml  SettingsLanguage.qml  SettingsSound.qml  SettingsSystem.qml  SettingsSystemDisplay.qml  SettingsSystemFirewall.qml  SettingsSystemFirewallExceptions.qml  SettingsSystemLanguage.qml  SettingsSystemSound.qml  SettingsSystemTime.qml  SettingsSystemTimeZones.qml  SettingsSystemTimezone.qml  SettingsSystemUpdate.qml  SettingsSystemWiFi.qml  SettingsSystemWiFiList.qml  SettingsSystemWiFiListPassword.qml  SettingsTime.qml  SettingsTimeZones.qml  SettingsUpdate.qml  SettingsWiFi.qml  SettingsWiFiList.qml  SettingsWiFiListPassword.qml
src/qml/pages/SpeedTest/: SpeedTest.qml
src/qml/pages/Wallet/: Address.qml  AddressBook.qml  Balance.qml  Bla.qml  Blf.qml  Bli.qml  Blu.qml  Network.qml  Receive.qml  Send.qml  Wallet.qml  WalletAddressbook.qml  WalletBalance.qml  WalletNetwork.qml  WalletReceive.qml  WalletSend.qml  WalletSettings.qml  WalletSettingsGeneral.qml  WalletSettingsGeneralFiat.qml
src/qml/singletons/: Colors.qml  SettingsManager.qml  TranslationManager.qml
src/qml/static/: AppContext.qml  BatteryManager.qml  Colors.qml  EventManager.qml  SettingsManager.qml  TranslationManager.qml
src/qml/translations/: cz.json  en.json
src/qml/utils/: NodeUtils.js
